# ADLMIDI-Player-Java

./: .gitignore  .travis.yml  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android-ci.yml
ADLMIDI-Player/: CMakeLists.txt  build.gradle  proguard-rules.pro
ADLMIDI-Player/icon/: descr.xcf
ADLMIDI-Player/release/: output.json
ADLMIDI-Player/src/main/: AndroidManifest.xml
ADLMIDI-Player/src/main/cpp/: adlmidi-jni.c  native-lib.c  native-lib.cpp  update.sh
ADLMIDI-Player/src/main/cpp/include/: adlmidi.h
ADLMIDI-Player/src/main/cpp/src/: adlmidi.cpp  adlmidi_load.cpp  adlmidi_midiplay.cpp  adlmidi_midiplay.hpp  adlmidi_opl3.cpp  adlmidi_opl3.hpp  adlmidi_sequencer.cpp
ADLMIDI-Player/src/main/cpp/src/chips/: dosbox_opl3.cpp
ADLMIDI-Player/src/main/java/ru/wohlsoft/adlmidiplayer/: AppSettings.java  HardButtonReceiver.java  OpenFileDialog.java  PlayMus.java  Player.java  PlayerService.java  PlayerSetup.java
ADLMIDI-Player/src/main/res/layout/: activity_player.xml
ADLMIDI-Player/src/main/res/values/: ic_launcher_background.xml  strings.xml
ADLMIDI-Player/src/main/res/values-en/: strings.xml
ADLMIDI-Player/src/main/res/values-fr/: strings.xml
ADLMIDI-Player/src/main/res/values-ru/: strings.xml
ADLMIDI-Player/src/test/java/ru/wohlsoft/adlmidiplayer/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/ru/wohlsoft/adlmidiplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ADLMIDI/: adlmidi.cpp
app/src/main/java/ru/wohlsoft/adlmidiplayer/: OpenFileDialog.java  Player.java
app/src/main/res/layout/: activity_player.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ru/: strings.xml
fastlane/metadata/android/de/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: short_description.txt
gradle/wrapper/: gradle-wrapper.properties
